# fashion

./: .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
notebooks/: index_asos_colab.ipynb
scripts/: index_asos.py
src/: __init__.py  config.py
src/database/: __init__.py  weaviate_client.py
src/indexer/: __init__.py  image_indexer.py
src/models/: __init__.py  base.py  clip_model.py  openclip_model.py  siglip_model.py
src/search/: __init__.py  engine.py  query_parser.py
src/web/: __init__.py  app.py  routes.py
src/web/templates/: index.html
tests/: test_search.py
